# osiris-app-template

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
src/: lib.rs
